--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.pootiapps.runforlife"
+        applicationId "com.hackhere.androidapp"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
