--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
+    compile 'com.getpebble:pebblekit:3.0.0'
+
+    repositories {
+        mavenCentral()
+        maven { url "https://oss.sonatype.org/content/groups/public/" }
+    }
+
 }
